# MQTT-Broker

./: .gitignore  MQTT-Broker.sln  broker_test.py  subs.py
MQTT-Broker/: Broker.cpp  Broker.h  CMakeLists.txt  MQTT-Broker.cpp  MQTT-Broker.vcxproj  MQTT-Broker.vcxproj.filters  MQTTMessageTypes.cpp  TCPServer.cpp  TCPServer.h  broker_test.cpp  main.cpp
MQTT-Broker/x64/Debug/: MQTT-Broker.exe.recipe  MQTT-Broker.ilk  vc143.idb
MQTT-Broker/x64/Debug/MQTT-Broker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MQTT-Broker.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
device/: device.py
